--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Horsemanship'
 - !lcc 'SF'
+- GITenberg
 title: 'Patroclus and Penelope: A Chat in the Saddle'
 url: http://www.gutenberg.org/ebooks/39244
